updated some other stuffs